# snickers

./: .gitignore  CMakeLists.txt  README.md
assemblers/nes/: nes.h
cli/: cli.cpp  cli_tools.h
components/: memory.h  rom.cpp  rom.h
core/: base.h  memory.cpp  memory.h  rom.cpp  rom.h
cores/nes/: 6502.cpp  6502.h  instructions.cpp  instructions.h  jump_types.h  memory_io.cpp  memory_io.h  nes.h  nes_ram.cpp  nes_ram.h  nes_rom.cpp  nes_rom.h  oam.h  ppu.cpp  ppu.h  ppu_palette.h  ppu_ram.cpp  ppu_ram.h  registers.cpp  registers.h  utils.cpp  utils.h
cores/snes/: memory.h  rom.cpp  snes_ram.cpp  snes_ram.h
factory/: Cargo.toml  file.rs  lexer.rs  main.rs
factory/src/: file.rs  lexer.rs  main.rs
factory/tests/: test_lexer.rs
misc/: conversion_test.cpp
misc_files/: log.txt
scripts/: setup.py
tests/: test_assembler.cpp  test_container_utils.cpp  test_integer.cpp  test_main.cpp  test_nes.cpp  test_nes_mem.cpp  test_ram.cpp  test_rom.cpp  test_typeutils.cpp  test_utils.h
utils/: type_utils.h
utils/assemblers/: asm_utils.cpp  asm_utils.h
utils/containers/: trie.h
utils/integer/: integer.h
utils/render/sdl2/: sdl_window.cpp  sdl_window.h
